--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <button onclick="selectTimeRange('Mediano Plazo')">Mediano Plazo</button>
         <button onclick="selectTimeRange('Largo Plazo')">Largo Plazo</button>
     </div>
+    <div id="submenu" style="display:none;">
+        <h3>Combinación Seleccionada</h3>
+        <p id="combination"></p>
+    </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
