--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <h3>Combinación Seleccionada</h3>
         <p id="combination"></p>
     </div>
+    <div id="polygonMenu" style="display:none;">
+        <h3>Opciones para <span id="polygonName"></span></h3>
+        <button onclick="showOption1()">Opción 1</button>
+        <button onclick="showOption2()">Opción 2</button>
+        <button onclick="showOption3()">Opción 3</button>
+    </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
