--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Mapa Interactivo</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css">
+    <style>
+        #map {
+            height: 600px; /* Altura del mapa */
+            width: 100%;   /* Ancho del mapa */
+        }
+    </style>
 </head>
 <body>
     <div id="map"></div>
@@ -30,6 +36,70 @@
         <button onclick="showOption3()">Opción 3</button>
     </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="script.js"></script>
+    <script>
+        // Inicializar el mapa centrado en México
+        var map = L.map('map').setView([23.6345, -102.5528], 5); // Coordenadas de México
+
+        // Añadir una capa de tiles de Mapbox (Satélite)
+            L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+                    attribution: '© Esri'
+                    }).addTo(map);
+
+        // Variables para almacenar la selección
+        var selectedPolygon = null;
+        var selectedScenario = null;
+        var selectedTimeRange = null;
+
+        // Cargar el GeoJSON
+        fetch('data/output.geojson')
+            .then(response => response.json())
+            .then(data => {
+                L.geoJSON(data, {
+                    onEachFeature: function(feature, layer) {
+                        layer.on('click', function(e) {
+                            selectedPolygon = feature.properties.NOMGEO; // O feature.properties.id
+                            document.getElementById('polygonName').innerText = selectedPolygon;
+                            document.getElementById('polygonMenu').style.display = 'block';
+                            document.getElementById('menu').style.display = 'none';
+                            document.getElementById('submenu').style.display = 'none';
+                        });
+                    }
+                }).addTo(map);
+            });
+
+        // Funciones para manejar la selección de escenario y rango de tiempo
+        function selectScenario(scenario) {
+            selectedScenario = scenario;
+            checkCombination();
+        }
+
+        function selectTimeRange(timeRange) {
+            selectedTimeRange = timeRange;
+            checkCombination();
+        }
+
+        // Función para verificar si se ha seleccionado una combinación completa
+        function checkCombination() {
+            if (selectedScenario && selectedTimeRange) {
+                // Mostrar el submenú con la combinación seleccionada
+                document.getElementById('combination').innerText = 
+                    `Polígono: ${selectedPolygon}\nEscenario: ${selectedScenario}\nRango de Tiempo: ${selectedTimeRange}`;
+                document.getElementById('submenu').style.display = 'block';
+            }
+        }
+
+        // Funciones para manejar las opciones del menú del polígono
+        function showOption1() {
+            alert(`Has seleccionado la Opción 1 para ${selectedPolygon}`);
+        }
+
+        function showOption2() {
+            alert(`Has seleccionado la Opción 2 para ${selectedPolygon}`);
+        }
+
+        function showOption3() {
+            alert(`Has seleccionado la Opción 3 para ${selectedPolygon}`);
+        }
+    </script>
 </body>
 </html>
